<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codefaction.suggestme11.Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/registerLayout">

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nameRegister"
            android:ems="10"
            android:id="@+id/registerName"
            android:layout_marginEnd="261dp"
            android:editable="true"
            android:enabled="true" />

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/idRegister"
            android:ems="10"
            android:id="@+id/registerID"
            android:layout_marginEnd="261dp"
            android:editable="true"
            android:enabled="true" />

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerEmail"
            android:editable="true"
            android:enabled="true"
            android:hint="@string/emailRegister" />

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:editable="true"
            android:enabled="true"
            android:hint="@string/registerPass" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPass"
            android:editable="true"
            android:enabled="true"
            android:hint="@string/confirmPass" />

        <Space
            android:layout_width="20dp"
            android:layout_height="10dp" />

        <Button
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/registerConfirm"
            android:layout_gravity="right"
            android:textColor="@android:color/background_light"
            android:background="#ff4659ff"
            android:onClick="register" />

    </LinearLayout>

</RelativeLayout>
