<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codefaction.suggestme11.GroupCreationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/groupCreationLayout"
        android:weightSum="1">

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/groupName"
            android:ems="10"
            android:id="@+id/registerGroupName"
            android:layout_marginEnd="261dp"
            android:editable="true"
            android:enabled="true" />

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:hint="@string/groupDescription"
            android:ems="10"
            android:id="@+id/groupDescription"
            android:layout_marginEnd="261dp"
            android:editable="true"
            android:enabled="true"
            android:layout_weight="0.46" />

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:ems="10"
            android:id="@+id/specifyTags"
            android:editable="true"
            android:enabled="true"
            android:hint="@string/specifyTags"
            android:layout_weight="0.18" />

        <Space
            android:layout_width="20dp"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="true"
            android:text="@string/groupDetailsCreation"
            android:textSize="20sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="10dp" />

        <Button
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/registerGroup"
            android:layout_gravity="right"
            android:textColor="@android:color/background_light"
            android:background="#ff4659ff"/>

    </LinearLayout>

</RelativeLayout>
