<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codefaction.suggestme11.SurveySuggestion">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userSurSug"
            android:layout_gravity="center_horizontal"
            android:hint="@string/yourSuggestionSurveySuggestion"
            android:editable="true"
            android:enabled="true"
            android:inputType="text" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/options"
            android:layout_gravity="center_horizontal"
            android:hint="@string/addOptionsSurveySuggestion"
            android:layout_weight="0.22"
            android:enabled="true"
            android:editable="true" />

        <Space
            android:layout_width="20dp"
            android:layout_height="60dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surTagbox"
            android:hint="@string/addTagsSurveySuggestion" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitSurveySuggestion"
            android:id="@+id/submitSurSug"
            android:layout_gravity="center_horizontal"
            android:onClick="submitSurSug"/>

    </LinearLayout>

</RelativeLayout>
