<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codefaction.suggestme11.MainScreen">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayoutMainScreen"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="242dp"
                android:layout_height="68dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/typeKeywords"
                android:id="@+id/textView" />

            <Button
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:text="@string/searchButton"
                android:id="@+id/searchButton"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:background="#ff4659ff"/>

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatsnew"
            android:textColor="@android:color/black"
            android:textSize="@dimen/abc_action_bar_stacked_max_height"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:id="@+id/listView"
            android:layout_weight="8659.78">

        </ListView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewMessage"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1867.29">


            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/myGroups"
                android:id="@+id/myGroupsButton"
                android:layout_gravity="bottom"
                android:textColor="@android:color/background_light"
                android:background="#ff4659ff"
                android:onClick="myGroups"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mySuggestions"
                android:id="@+id/mySuggestionsButton"
                android:layout_gravity="bottom"
                android:textColor="@android:color/background_light"
                android:background="#ff4659ff"
                android:onClick="mySuggestions"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/myAccount"
                android:id="@+id/myAccountButton"
                android:layout_gravity="bottom"
                android:textColor="@android:color/background_light"
                android:background="#ff4659ff"
                android:onClick="accountSettings"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

        </TableRow>


    </LinearLayout>


</RelativeLayout>
