<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codefaction.suggestme11.SuggestOptions">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/optionTextSuggestion"
            android:id="@+id/txtSug"
            android:layout_marginTop="92dp"
            android:clickable="true"
            android:enabled="true"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:background="#ff404eff"
            android:onClick="textSuggest"/>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="40dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/optionSurveySuggestion"
            android:id="@+id/surveySug"
            android:background="#ff3d5bff"
            android:clickable="true"
            android:enabled="true"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:onClick="surveySuggest"/>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="40dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/optionDebateSuggestion"
            android:id="@+id/debateSug"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:background="#ff4254ff"
            android:onClick="debateSuggest"/>

    </LinearLayout>

</RelativeLayout>
